--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -27,9 +27,7 @@
                             <li class="nav-item">
                                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Register</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Login</a>
-                            </li>
+                           
                         </ul>
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
@@ -38,14 +36,14 @@
                                 <div class="row register-form">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="First Name *" name="firstname" value="" required/>
+                                            <input type="text" class="form-control" placeholder="First Name *" name="firstname" value="" autocomplete="off" required/>
                                         </div>
                                         
                                          <div class="form-group">
-                                            <input type="number" class="form-control" placeholder="Age*" name="age" value="" required/>
+                                            <input type="number" class="form-control" placeholder="Age*" name="age" value="" autocomplete="off" required/>
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control" placeholder="Password *" name="password" value="" required/>
+                                            <input type="password" class="form-control" placeholder="Password *" name="password" value=""required/>
                                         </div>
                                         
                                         <div class="form-group">
@@ -63,16 +61,16 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Last Name *" name="lastname" value="" required/>
+                                            <input type="text" class="form-control" placeholder="Last Name *" name="lastname" value="" autocomplete="off" required/>
                                         </div>
                                         <div class="form-group">
-                                            <input type="email" class="form-control" placeholder="Your Email *" name="email" value="" required/>
+                                            <input type="email" class="form-control" placeholder="Your Email *" name="email" value="" autocomplete="off" required/>
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control"  placeholder="Confirm Password *" name="confirmpassword" value="" required/>
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" minlength="10" maxlength="10" name="phone" class="form-control" placeholder="Your Phone *" value="" required/>
+                                            <input type="text" minlength="10" maxlength="10" name="phone" class="form-control" placeholder="Your Phone *" value="" autocomplete="off" required/>
                                         </div>
                                         <input type="submit" class="btnRegister"  value="Register"/>
                                     </div>
