--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -52,11 +52,11 @@
                     <form action="./login" method="POST">
                     <div class="row px-3"> <label class="mb-1">
                             <h6 class="mb-0 text-sm" style="color: black;">Email Address</h6>
-                        </label> <input class="mb-4" type="text" name="loginemail" placeholder="Enter a valid email address" required> 
+                        </label> <input class="mb-4" type="text" name="loginemail" placeholder="Enter a valid email address" autocomplete="off" required> 
                     </div>
                     <div class="row px-3"> <label class="mb-1">
                             <h6 class="mb-0 text-sm" style="color: black;">Password</h6>
-                        </label> <input type="password" name="loginpassword" placeholder="Enter password" required> 
+                        </label> <input type="password" name="loginpassword" placeholder="Enter password" autocomplete="off" required> 
                     </div>
                     <div class="row px-3 mb-4">
                         <div class="custom-control custom-checkbox custom-control-inline"> 
